[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/TileSet/0x72_DungeonTilesetII_v1.3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Map/closeddoor.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=3]
[ext_resource path="res://Assets/Map/open_door.png" type="Texture" id=4]
[ext_resource path="res://Scripts/SaveCards/GameSaves.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Objects/LavaLamp.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/SaveCards/ContinueGame.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/SaveCards/GamePopup.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/SaveCards/NewGame.tscn" type="PackedScene" id=12]
[ext_resource path="res://GUI/Buttons/Yes/YesButton2.png" type="Texture" id=13]
[ext_resource path="res://GUI/Buttons/Yes/YesButton3.png" type="Texture" id=14]
[ext_resource path="res://GUI/Buttons/No/NoButton1.png" type="Texture" id=15]
[ext_resource path="res://GUI/Buttons/Yes/YesButton1.png" type="Texture" id=16]
[ext_resource path="res://GUI/Buttons/No/NoButton2.png" type="Texture" id=17]
[ext_resource path="res://GUI/Panels/quitconfirmation.png" type="Texture" id=18]
[ext_resource path="res://GUI/Buttons/No/NoButton3.png" type="Texture" id=19]
[ext_resource path="res://Fonts/BornDynamic8.tres" type="DynamicFont" id=20]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "0x72_DungeonTilesetII_v1.3.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 208, 64, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "0x72_DungeonTilesetII_v1.3.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 160, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "0x72_DungeonTilesetII_v1.3.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 112, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "0x72_DungeonTilesetII_v1.3.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 64, 48, 48 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [ Vector3( 2, 2, 2 ) ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "0x72_DungeonTilesetII_v1.3.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 48, 112, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "0x72_DungeonTilesetII_v1.3.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 0, 16, 48 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 8, 0, 8, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 8, 0, 16, 0, 16, 16, 8, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 8, 0, 8, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 0, 0, 0, 16, 0, 16, 0, 1 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 8, 0, 16, 0, 16, 16, 8, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 0, 16, 16, 0, 16, 0, 13, 0, 9, 8, 9, 8, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 8, 0, 8, 9, 16, 9, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 16, 0, 9, 16, 9, 16, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 9, 16, 9, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 6, 16, 6, 16, 11, 0, 11 )

[sub_resource type="TileSet" id=13]
0/name = "0x72_DungeonTilesetII_v1.3.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 112, 96, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "0x72_DungeonTilesetII_v1.3.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( -16, 176, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "0x72_DungeonTilesetII_v1.3.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 176, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 12 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "0x72_DungeonTilesetII_v1.3.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 0, 16, 48 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "0x72_DungeonTilesetII_v1.3.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 16, 32, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 13, 6 )

[node name="Lobby" type="Node2D"]
script = ExtResource( 3 )

[node name="PopUp" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 5 )
gamePopUp = ExtResource( 11 )
newGame = ExtResource( 12 )
continueGame = ExtResource( 10 )

[node name="GamePanel0" parent="PopUp" instance=ExtResource( 11 )]
margin_left = 321.052
margin_top = 0.396851
margin_right = 392.052
margin_bottom = 96.3969

[node name="GamePanel1" parent="PopUp" instance=ExtResource( 11 )]
margin_left = 321.052
margin_top = 0.396851
margin_right = 392.052
margin_bottom = 96.3969

[node name="GamePanel2" parent="PopUp" instance=ExtResource( 11 )]
margin_left = 321.052
margin_top = 0.396851
margin_right = 392.052
margin_bottom = 96.3969

[node name="Confirmation" type="CanvasLayer" parent="."]

[node name="BG" type="TextureRect" parent="Confirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = -16.0
margin_right = 59.0
margin_bottom = 16.0
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Confirmation/BG"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.5
margin_top = 2.0
margin_right = 36.5
margin_bottom = 10.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.137255, 1 )
text = "Confirm Delete Save?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="TextureButton" parent="Confirmation/BG"]
margin_left = 33.2753
margin_top = 13.2527
margin_right = 58.2753
margin_bottom = 27.2527
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="TextureButton" parent="Confirmation/BG"]
margin_left = 60.2753
margin_top = 13.2527
margin_right = 84.2753
margin_bottom = 27.2527
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorNWalls" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 65536, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 1, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 1, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 131073, 262162, 3, 0, 262163, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 65536, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 393216, 3, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 1, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 65536, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 131073, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 1, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 65536, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 131073, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 1, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 1, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 131073, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0 )

[node name="Walls" type="TileMap" parent="."]
tile_set = SubResource( 13 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 65537, 8, 4, 0, 11, 4, 0, 19, 0, 65536, 65536, 0, 65537, 65540, 3, 0, 65541, 0, 196613, 65542, 0, 196613, 65543, 0, 196613, 65548, 0, 196612, 65549, 0, 196612, 65550, 0, 196612, 65551, 3, 0, 65555, 0, 65536, 131072, 0, 65537, 131081, 2, 0, 131082, 2, 0, 131091, 0, 65536, 196608, 0, 65537, 196627, 0, 65536, 262144, 0, 65537, 262163, 0, 65536, 327680, 0, 65537, 327699, 0, 65536, 393216, 0, 65537, 393235, 0, 65536, 458752, 0, 65537, 458771, 0, 65536, 524288, 0, 65537, 524307, 0, 65536, 589824, 0, 65541, 589825, 0, 196612, 589826, 0, 196612, 589827, 0, 196612, 589828, 0, 196612, 589829, 0, 196612, 589830, 0, 196612, 589831, 0, 196612, 589832, 0, 196612, 589833, 0, 196612, 589834, 0, 196613, 589835, 0, 196613, 589836, 0, 196613, 589837, 0, 196613, 589838, 0, 196613, 589839, 0, 196613, 589840, 0, 196613, 589841, 0, 196613, 589842, 0, 196613, 589843, 0, 65540, 655360, 0, 196610, 655361, 0, 196610, 655362, 0, 196610, 655363, 0, 196610, 655364, 0, 196610, 655365, 0, 196610, 655366, 0, 196610, 655367, 0, 196610, 655368, 0, 196610, 655369, 0, 196610, 655370, 0, 196610, 655371, 0, 196610, 655372, 0, 196610, 655373, 0, 196610, 655374, 0, 196610, 655375, 0, 196610, 655376, 0, 196610, 655377, 0, 196610, 655378, 0, 196610, 655379, 0, 196610 )

[node name="ClosedDoor" type="Sprite" parent="."]
position = Vector2( 160, 30.5 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="ClosedDoor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClosedDoor/Area2D"]
position = Vector2( 0, 7.5 )
shape = SubResource( 14 )

[node name="OpenDoor" type="Sprite" parent="."]
visible = false
position = Vector2( 160, 30.5 )
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 159.419, 56.8906 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.454902, 0.262745, 0.262745, 1 )

[node name="Light2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 72.2946, 44.3873 )

[node name="AnimatedSprite" parent="Light2D" index="0"]
visible = false
frame = 1

[node name="Light2D2" parent="." instance=ExtResource( 6 )]
position = Vector2( 247.784, 42.3272 )

[node name="AnimatedSprite" parent="Light2D2" index="0"]
visible = false
frame = 1

[connection signal="pressed" from="Confirmation/BG/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Confirmation/BG/No" to="." method="_on_No_pressed"]
[connection signal="body_entered" from="ClosedDoor/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="ClosedDoor/Area2D" to="." method="_on_Area2D_body_exited"]

[editable path="Light2D"]
[editable path="Light2D2"]
